# plutus-community

./: .gitignore  CONTRIBUTING.md  DISCLAIMER.md  main.py  mkdocs.yml  staticman.yml
docs/: README.md  mkdocs.navigation.yml
docs/Plutus/Lectures/Cohort_03/: Lecture_01.md  Lecture_03.md  Lecture_10.md
plutus-challenge-track/: README.md  cabal.project  vasil-nix.nix
plutus-challenge-track/simple-swap/cardano/: hie.yaml  plutus-swap.cabal
plutus-challenge-track/simple-swap/cardano/app/: plutus-swap.hs
plutus-challenge-track/simple-swap/cardano/src/Cardano/: Swap.hs  Token.hs
